WS - Fix display on ios

--- a/internal/view/less/components/entry-list.less
+++ b/internal/view/less/components/entry-list.less
@@ -62,11 +62,7 @@
 // Body styles
 
 .entry-list__body {
-	display   : flex;
-	flex-flow : column nowrap;
-	overflow-x: hidden;
 	overflow-y: auto;
-	flex      : 1 0;
 }
 
 .entry__date {
